--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.7.0",
     "pytest>=8.0.0",
     "aioboto3>=15.5.0",
+    "asyncpg>=0.30.0",
 ]
 
 [tool.pytest.ini_options]
